# disclosure-signals

./: .gitignore  legacy-congress  legacy-insider  pyproject.toml
archive/legacy-congress/: .gitignore  pyproject.toml  requirements.txt
archive/legacy-congress/cppi/: cli.py  ocr.py  reporting.py  resolution.py  scoring.py
archive/legacy-congress/cppi/analysis/: crossref.py  sensitivity.py  weight_comparison.py
archive/legacy-congress/cppi/backtest/: __init__.py  engine.py
archive/legacy-congress/cppi/connectors/: __init__.py
archive/legacy-congress/cppi/enrichment/: __init__.py
archive/legacy-congress/cppi/services/: __init__.py  reporting_service.py  status_service.py
archive/legacy-congress/cppi/validation/: __init__.py  validator.py
archive/legacy-congress/docs/: data_source_analysis.md
archive/legacy-congress/docs/plans/: 2026-03-28-cppi-design.md  2026-03-31-cppi-data-completeness.md  2026-03-31-cppi-phase3-senate-scraping.md  2026-04-01-cppi-data-quality.md  2026-04-01-insider-crossref.md  2026-04-02-idempotent-parsing.md
archive/legacy-congress/output/: test_report.txt
archive/legacy-congress/tests/: conftest.py  test_backtest.py  test_crossref.py  test_e2e_pipeline.py  test_enrichment.py  test_house.py  test_parsing.py  test_sector_mapping.py  test_sector_positioning.py  test_senate.py  test_validation.py
data/: live_universe_top10.csv
docs/: .env.signals.example  SYSTEM_DOCUMENTATION.md  dto-spec.md  house-ocr-decision.md  interfaces.md  legacy-dependency-audit.md  migration-mapping-congress.md  migration-mapping-insider.md  parity-test-plan.md  provenance-schema.md  reason-codes.md  versioning-policy.md
legacy-congress/: README.md
legacy-insider/: .gitignore  README.md  classification.py  cli.py  ingestion.py  parsing.py  reporting.py  types.py
scripts/: parity_harness.py
tests/: test_backtest.py  test_cli_run_direct_flag.py  test_committees.py  test_doctor.py  (+25 more)
(+152 files in other folders)
