[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disclosure-signals"
version = "0.1.0"
description = "Controlled consolidation workspace for insider and congressional disclosure signals"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "httpx>=0.24.0",
  "requests>=2.28.0",
  "pdfplumber>=0.9.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
validation = [
  "yfinance>=0.2.0",
]
web = [
  "uvicorn>=0.27.0",
]

[project.scripts]
signals = "signals.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["signals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

